--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,5 +1,6 @@
 NAME = phonebook
-SOURCES = main.cpp phonebook.cpp
+# SOURCES = main.cpp phonebook.cpp
+SOURCES = test.cpp Contact.cpp PhoneBook.cpp ft_chop.cpp
 
 OBJS = $(addprefix $(OBJ_DIR)/, $(SOURCES:.cpp=.o))
 SRCS = $(addprefix $(SRC_DIR)/, $(SOURCES))
@@ -22,7 +23,7 @@ re :
 	make fclean
 	make all
 
-$(NAME) : $(OBJS) $(LIBS)
+$(NAME) : $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -I $(INC_DIR) -o $@
 
 $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp | $(OBJ_DIR)
