--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,16 +1,17 @@
 NAME = phonebook
 SOURCES = main.cpp Contact.cpp PhoneBook.cpp ft_chop.cpp
+INCLUDES = Contact.hpp PhoneBook.hpp
 
 OBJS = $(addprefix $(OBJ_DIR)/, $(SOURCES:.cpp=.o))
 SRCS = $(addprefix $(SRC_DIR)/, $(SOURCES))
+INCS = $(addprefix $(INC_DIR)/, $(INCLUDES))
 
 SRC_DIR = .
 OBJ_DIR = objs
 INC_DIR = .
 
-
 CC = c++
-CFLAGS = -Wall -Werror -Wextra # -I $(INC_DIR)
+CFLAGS = -Wall -Werror -Wextra -std=c++98 -I $(INC_DIR)
 
 all : $(NAME)
 
@@ -22,7 +23,7 @@ re :
 	make fclean
 	make all
 
-$(NAME) : $(OBJS)
+$(NAME) : $(OBJS) $(INCS)
 	$(CC) $(CFLAGS) $(OBJS) -I $(INC_DIR) -o $@
 
 $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp | $(OBJ_DIR)
